--- a/.github/workflows/test_integrations.yml
+++ b/.github/workflows/test_integrations.yml
@@ -26,7 +26,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           SLACK_TEST_CHANNEL: ${{ secrets.SLACK_TEST_CHANNEL }}
           SERPAPI_KEY: ${{ secrets.SERPAPI_KEY }}
-          service-account: ${{ secrets.service-account }}
+          SERVICE_ACCOUNT: ${{ secrets.service-account }}
           GOOGLE_SHEET_ID: ${{ secrets.GOOGLE_SHEET_ID }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
